--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ paginate = 6
 theme = "portio"
 title = "Kukode.in - Jasa Pembuatan Website & Maintenance SEO Jogja"
 
+publishDir = "docs"
 disqusShortname = "ahmadmzakki"
 
 # Main Menu
